display none for 2 ids

--- a/forgesample/wwwroot/index.html
+++ b/forgesample/wwwroot/index.html
@@ -18,7 +18,7 @@
     <script src="/js/ForgeDesignAutomation.js"></script>
 </head>
 
-<body style="height: 100%;">
+<body>
     <!-- options bar -->
     <div class="communicationPanel divCenter">
         <div class="panelSetup">
@@ -67,7 +67,7 @@
         <!-- End of new bucket creation -->
 
     </div>
-    <div>
+    <div class="secondWindow">
 
     </div>
     <!-- End of engine selector-->
