Login is finished

--- a/forgesample/wwwroot/index.html
+++ b/forgesample/wwwroot/index.html
@@ -16,6 +16,7 @@
     <script src="//unpkg.com/@aspnet/signalr@1.1.0/dist/browser/signalr.min.js"></script>
     <!-- Files for this project -->
     <script src="/js/ForgeDesignAutomation.js"></script>
+    <script src="/js/UserLogin.js"></script>
 </head>
 
 <body>
