--- a/forgesample/wwwroot/index.html
+++ b/forgesample/wwwroot/index.html
@@ -68,12 +68,28 @@
         <!-- End of new bucket creation -->
 
     </div>
-    <div class="secondWindow">
-
+    <div class="secondWindow" id="visualPanel">
+        <div>
+            <!-- Ovaj div theba da je 1/4 širine i postavljen je levo-->
+            <div id="forgeTree">
+                <!-- Ovaj div je 3/4 visine i postavljen je gore-->
+            </div>
+            <div>
+                <!-- Ovaj div je 1/4 visine i postavljen je u sredini-->
+                <label for="inputFile">Input file</label>
+                <input type="file" class="form-control-file" id="inputFile">
+            </div>
+            <div id="layerList">
+                <!-- ovaj div je donja polovina-->
+            </div>
+        </div>
+        <div id="forgeViewer">
+            <!-- Ovaj div treba da je 3/4 širine i postavljen je desno-->
+        </div>
     </div>
     <!-- End of engine selector-->
     <!-- Modal Define AppBundle & Activity -->
-    <div class="modal fade" id="defineActivityModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal fade" id="layerManager" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
