--- a/forgesample/wwwroot/index.html
+++ b/forgesample/wwwroot/index.html
@@ -29,27 +29,27 @@
         <!-- End of options bar -->
         <!-- Login window -->
         <div class="loginWindow" id="loginSetupWnd">
-            <div class="divCenter">
+            <div class="fieldsPossition">
                 <label for="clientID" class="logInLabel">Forge Client ID</label>
                 <input id="forgeClientId" class="inputCred" type="text" required />
             </div>
-            <div class="divCenter">
+            <div class="fieldsPossition">
                 <label for="clientSecret" class="logInLabel">Forge Client Secret</label>
                 <input id="forgeClientSecret" class="inputCred" type="password" required />
             </div>
-            <div class="divCenter">
+            <div class="fieldsPossition">
                 <button id="login" class="loginBtn">Login and setup engine</button>
             </div>
         </div>
         <!-- End of login window -->
         <!-- Project selector window -->
         <div id="projectSelector">
-            <div class="divCenter">
+            <div class="fieldsPossition">
                 <label for="userProjects" class="logInLabel">Your projects</label>
                 <select class="selectCred" id="buckets">
                 </select>
             </div>
-            <div class="divCenter">
+            <div class="fieldsPossition">
                 <button id="projectSelect" class="loginBtn">Accept project and run application</button>
             </div>
         </div>
