the first screen's css created

--- a/forgesample/wwwroot/index.html
+++ b/forgesample/wwwroot/index.html
@@ -22,6 +22,7 @@
 <body>
     <!-- options bar -->
     <div class="communicationPanel divCenter">
+        <!-- teamCAD -->
         <div class="panelSetup">
             <a href="https://www.teamcad.rs/index.php/srb" target="_blank">
                 <img alt="TeamCAD Serbia" src="images/TeamCAD logo.jpg" height="80">
@@ -32,36 +33,39 @@
         <div class="loginWindow" id="loginSetupWnd">
             <div class="fieldsPossition">
                 <label for="clientID" class="logInLabel">Forge Client ID</label>
-                <input id="forgeClientId" class="inputCred" type="text" required />
+                <input id="forgeClientId" class="inputCred" type="text" required />        
             </div>
+
+
             <div class="fieldsPossition">
                 <label for="clientSecret" class="logInLabel">Forge Client Secret</label>
                 <input id="forgeClientSecret" class="inputCred" type="password" required />
+                    
             </div>
-            <div class="fieldsPossition">
+            <div class="buttonPossition">
                 <button id="login" class="loginBtn">Login and setup engine</button>
             </div>
         </div>
         <!-- End of login window -->
         <!-- Project selector window -->
         <div id="projectSelector">
-            <div class="fieldsPossition">
+            <div class="selectPossition">
                 <label for="userProjects" class="logInLabel">Your projects</label>
                 <select class="selectCred" id="buckets">
                 </select>
             </div>
-            <div class="fieldsPossition">
+            <div class="buttonPossition">
                 <button id="projectSelect" class="loginBtn">Accept project and run application</button>
             </div>
         </div>
         <!-- End of project selection -->
         <!-- Create new bucket -->
         <div id="newBucket">
-            <div class="divCenter">
+            <div class="fieldsPossition">
                 <label for="clientBucket" class="logInLabel">New project name</label>
                 <input id="forgeBucket" class="inputCred" type="text" required />
             </div>
-            <div class="divCenter">
+            <div class="buttonPossition">
                 <button id="loginWithNewBucket" class="loginBtn">Accept new project and run application</button>
             </div>
         </div>
