--- a/forgesample/wwwroot/index.html
+++ b/forgesample/wwwroot/index.html
@@ -21,36 +21,33 @@
 
 <body>
     <!-- options bar -->
-    <div class="firstWindow">
-    <div class="divCenter">
-        <!-- teamCAD -->
-        <div class="panelSetup">
-            <a href="https://www.teamcad.rs/index.php/srb" target="_blank">
-                <img alt="TeamCAD Serbia" src="images/TeamCAD logo.jpg" height="80">
-            </a>
-        </div>
-        <!-- End of options bar -->
-        <!-- Login window -->
-        <div class="loginWindow" id="loginSetupWnd">
-            <div class="fieldsPossition">
-                <label for="clientID" class="logInLabel">Forge Client ID</label>
-                <input id="forgeClientId" class="inputCred" type="text" required />        
+    <div class="firstWindow" id="loginPanel">
+        <div class="divCenter">
+            <!-- teamCAD -->
+            <div class="panelSetup">
+                <a href="https://www.teamcad.rs/index.php/srb" target="_blank">
+                    <img alt="TeamCAD Serbia" src="images/TeamCAD logo.jpg" height="80">
+                </a>
             </div>
-
-
-            <div class="fieldsPossition">
-                <label for="clientSecret" class="logInLabel">Forge Client Secret</label>
-                <input id="forgeClientSecret" class="inputCred" type="password" required />
-                    
-            </div>
-            <div class="buttonPossition">
-                <button id="login" class="loginBtn">Login and setup engine</button>
+            <!-- End of options bar -->
+            <!-- Login window -->
+            <div class="loginWindow" id="loginSetupWnd">
+                <div class="fieldsPossition">
+                    <label for="clientID" class="logInLabel">Forge Client ID</label>
+                    <input id="forgeClientId" class="inputCred" type="text" required />
+                </div>
+                <div class="fieldsPossition">
+                    <label for="clientSecret" class="logInLabel">Forge Client Secret</label>
+                    <input id="forgeClientSecret" class="inputCred" type="password" required />
+                </div>
+                <div class="buttonPossition">
+                    <button id="login" class="loginBtn">Login and setup engine</button>
+                </div>
             </div>
         </div>
-    </div>
         <!-- End of login window -->
         <!-- Project selector window -->
-        <div id="projectSelector">
+        <div class="divCenter" id="projectSelector">
             <div class="selectPossition">
                 <label for="userProjects" class="logInLabel">Your projects</label>
                 <select class="selectCred" id="buckets">
@@ -63,7 +60,7 @@
         </div>
         <!-- End of project selection -->
         <!-- Create new bucket -->
-        <div id="newBucket">
+        <div class="divCenter" id="newBucket">
             <div class="fieldsPossition">
                 <label for="clientBucket" class="logInLabel">New project name</label>
                 <input id="forgeBucket" class="inputCred" type="text" required />
@@ -73,7 +70,6 @@
             </div>
         </div>
         <!-- End of new bucket creation -->
-
     </div>
     <div class="secondWindow" id="visualPanel">
         <div class="leftSide">
