--- a/forgesample/wwwroot/index.html
+++ b/forgesample/wwwroot/index.html
@@ -5,16 +5,22 @@
     <title>TeamCAD - Edge analyzer</title>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="https://github.com/Autodesk-Forge/learn.forge.viewhubmodels/raw/master/img/favicon.ico">
-    <!-- Common packages: jQuery, Bootstrap -->
+    <!-- Common packages: jQuery, Bootstrap, jstree -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.7/jstree.min.js"></script>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.7/themes/default/style.min.css" />
+    <!-- this project files -->
     <link rel="stylesheet" href="./css/style.css">
-    <!-- THREE from Forge viewer -->
+    <!-- Autodesk Forge Viewer files -->
+    <link rel="stylesheet" href="https://developer.api.autodesk.com/modelderivative/v2/viewers/7.*/style.min.css" type="text/css">
     <script src="https://developer.api.autodesk.com/modelderivative/v2/viewers/7.*/viewer3D.min.js"></script>
     <!-- .NET SignalR -->
     <script src="//unpkg.com/@aspnet/signalr@1.1.0/dist/browser/signalr.min.js"></script>
     <!-- Files for this project -->
+    <script src="/js/ForgeViewer.js"></script>
+    <script src="/js/ForgeTree.js"></script>
     <script src="/js/ForgeDesignAutomation.js"></script>
     <script src="/js/UserLogin.js"></script>
 </head>
@@ -81,13 +87,15 @@
     <div class="secondWindow" id="visualPanel">
         <div class="leftSide">
             <!-- Ovaj div theba da je 1/4 širine i postavljen je levo-->
-            <div id="forgeTree" class="leftTop">
+            <div id="appBuckets" class="leftTop">
                 <!-- Ovaj div je 3/4 visine i postavljen je gore-->
             </div>
             <div class="middleLeft">
                 <!-- Ovaj div je 1/4 visine i postavljen je u sredini-->
-                <label for="inputFile">Input file</label>
-                <input type="file" class="form-control-file" id="inputFile">
+                <button id="startWorkItem" class="loginBtn">Calculate and show edges</button>
+                <form id="uploadFile" method='post' enctype="multipart/form-data">
+                    <input type="file" class="form-control-file" id="inputFile" style="visibility:hidden" />
+                </form>
             </div>
             <div id="layerList" class="bottomLeft">
                 <!-- ovaj div je donja polovina-->
