layer list style

--- a/WebEdgeClassification/wwwroot/index.html
+++ b/WebEdgeClassification/wwwroot/index.html
@@ -104,11 +104,11 @@
                         <input type="file" class="form-control-file" id="inputFile" style="visibility:hidden" />
                     </form>
                 </div>
-                <div id="layerList" class="">
+                <div id="layerList" class="layerListContainer">
                     <!-- ovaj div je donja polovina-->
-                    <input type="text" class="leftSide" placeholder="Layer name" />
+                    <input type="text" class="layerInput" placeholder="Layer name" />
                     <div class="colorSelector"></div>
-                    <button type="button">&#9587</button>
+                    <button type="button" class="layerBtn">&#9587</button>
 
                 </div>
             </div>
